--- a/index.html
+++ b/index.html
@@ -2,11 +2,177 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
+    <title>Нёрдс — Главная</title>
   </head>
   <body>
+    <header class="header">
+      <a class="header__link-logo">
+        <img class="header__logo" src="https://via.placeholder.com/160x65" alt="Логотип Нёрдс">
+      </a>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+      <nav class="header__main-nav main-nav">
+        <ul class="main-nav__site-list site-list">
+          <li class="site-list__item">
+            <a href="#">Студия</a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">Клиенты</a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">Магазин</a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">Контакты</a>
+          </li>
+        </ul>
+      </nav>
 
+      <a href="#" class="header__link-to-basket">Корзина</a>
+    </header>
+
+    <main class="main">
+      <h1 class="visually-hidden">Главная страница Нёрдс</h1>
+
+      <section class="promo-slider">
+        <h2 class="visually-hidden">Промо-слайдер</h2>
+        <!-- Тут будет слайдер -->
+      </section>
+
+      <section class="services">
+        <h2 class="visually-hidden">Список услуг</h2>
+
+        <ul class="services__list">
+          <li class="services__list-item service">
+            <h3 class="service__title">Веб-сайты</h3>
+            <p class="service__description">
+              Мир никогда не будет прежним после того как увидит ваш сайт!
+            </p>
+            <a href="#" class="service__link-order">Заказать</a>
+          </li>
+
+          <li class="services__list-item service">
+            <h3 class="service__title">Приложения</h3>
+            <p class="service__description">
+              Покорите топ-10 приложений в AppStore и Google Play
+            </p>
+            <a href="#" class="service__link-order">Заказать</a>
+          </li>
+
+          <li class="services__list-item service">
+            <h3 class="service__title">Презентации</h3>
+            <p class="service__description">
+              Вы даже не подозреваете, насколько вы изумительны!
+            </p>
+            <a href="#" class="service__link-order">Заказать</a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="descrition-nerds">
+        <h2 class="visually-hidden">Описание компании Nёrds</h2>
+
+        <p class="descrition-nerds__text-slogan">
+          Мы — маленькая, но гордая дизайн-студия из Краснодара.
+        </p>
+
+        <p class="descrition-nerds__text-principles">
+          Исповедуем принципы минимализма и чистоты.
+          Ставим математический расчет превыше креатива.
+          Работаем не покладая рук, как роботы
+        </p>
+
+        <h3 class="descrition-nerds__title">Выполняем заказы на разработку:</h3>
+        <ul class="descrition-nerds__list-services">
+          <li class="descrition-nerds__list-services-item">
+            Веб-сайтов любой сложности
+          </li>
+          <li class="descrition-nerds__list-services-item">
+            Мобильных приложений для iOS и Android
+          </li>
+          <li class="descrition-nerds__list-services-item">
+            Слайдшоу и видео для корпоративных презентации
+          </li>
+        </ul>
+
+        <img class="descrition-nerds__logo" src="https://via.placeholder.com/360x280" alt="Логотип Neds">
+
+        <h3>С 2004 года любим точность во всем:</h3>
+        <table class="descrition-nerds__static-table">
+          <tr>
+            <td class="descrition-nerds__static-table-field">
+              Уровень самоотдачи
+            </td>
+            <td class="descrition-nerds__static-table-value">
+              146%
+            </td>
+          </tr>
+          <tr>
+            <td class="descrition-nerds__static-table-field">
+              Соблюдение сроков
+            </td>
+            <td class="descrition-nerds__static-table-value">
+              100%
+            </td>
+          </tr>
+          <tr>
+            <td class="descrition-nerds__static-table-field">
+              Минимальная предоплата
+            </td>
+            <td class="descrition-nerds__static-table-value">
+              50%
+            </td>
+          </tr>
+        </table>
+      </section>
+
+      <section class="partners">
+        <h2 class="visually-hidden">Наши партнеры</h2>
+
+        <ul class="partners__list">
+          <li class="partners__list-item">
+            Html Academy
+          </li>
+          <li class="partners__list-item">
+            Barbershop Borodinski
+          </li>
+          <li class="partners__list-item">
+            Pink
+          </li>
+          <li class="partners__list-item">
+            Mishka
+          </li>
+        </ul>
+      </section>
+
+      <section class="map">
+        <h2 class="visually-hidden">Карта</h2>
+        <!-- Тут будет карта гугл/яндекс -->
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="footer__social social">
+        <h3 class="social__list">Социальные сети</h3>
+        <ul class="social-list">
+          <li class="social-list-item">
+            <a href="#">ВКонтакте</a>
+          </li>
+          <li class="social-list-item">
+            <a href="#">Фейсбук</a>
+          </li>
+          <li class="social-list-item">
+            <a href="#">Инстаграмм</a>
+          </li>
+        </ul>
+      </div>
+
+      <p class="footer__text-slogan">
+        Давайте дружить, это выгодно!
+      </p>
+
+      <p class="footer__text">
+        Скидка 10% для друзей из социальных сетей.
+      </p>
+    </footer>
   </body>
 </html>
