Разметил страницу каталога шаблонов (кроме карт и формы)

--- a/catalog.html
+++ b/catalog.html
@@ -19,7 +19,7 @@
             <a href="#">Клиенты</a>
           </li>
           <li class="site-list__item">
-            <a href="#">Магазин</a>
+            <a>Магазин</a>
           </li>
           <li class="site-list__item">
             <a href="#">Контакты</a>
@@ -28,10 +28,94 @@
       </nav>
 
       <a href="#" class="header__link-to-basket">Корзина</a>
+      <h1 class="header__title">Магазин готовых шаблонов</h1>
     </header>
 
     <main class="main">
+      <section class="main-filter">
+        <h2>Поиск шаблонов по фильтру</h2>
+        <!-- Тут будет форма фильтров -->
+      </section>
 
+      <section class="sort-filter">
+        <h2>Фильтр сортировки</h2>
+        <!-- Тут будут  -->
+      </section>
+
+      <section class="patterns">
+        <h2 class="visually-hidden">Список шаблонов</h2>
+
+        <ul class="patterns__list">
+          <li class="patterns__list-item pattern">
+            <h3 class="pattern__title">Sedona</h3>
+            <img src="https://via.placeholder.com/358x578" alt="Фото сайта Седона" class="pattern__photo">
+            <p class="pattern__description">
+              Информационный сайт для туристов
+            </p>
+            <button class="pattern__btn-price">9 900 ₽</button>
+          </li>
+          <li class="patterns__list-item pattern">
+            <h3 class="pattern__title">Pink</h3>
+            <img src="https://via.placeholder.com/358x578" alt="Фото сайта Pink" class="pattern__photo">
+            <p class="pattern__description">
+              сайт приложения фильтра розового цвета
+            </p>
+            <button class="pattern__btn-price">9 900 ₽</button>
+          </li>
+          <li class="patterns__list-item pattern">
+            <h3 class="pattern__title">Barbershop Borodinski</h3>
+            <img src="https://via.placeholder.com/358x578" alt="Фото сайта Barbershop" class="pattern__photo">
+            <p class="pattern__description">
+              Сайт барбершопа для бородачей
+            </p>
+            <button class="pattern__btn-price">9 900 ₽</button>
+          </li>
+          <li class="patterns__list-item pattern">
+            <h3 class="pattern__title">Mishka</h3>
+            <img src="https://via.placeholder.com/358x578" alt="Фото сайта Mishka" class="pattern__photo">
+            <p class="pattern__description">
+              Милые штуки ручной работы для дома
+            </p>
+            <button class="pattern__btn-price">9 900 ₽</button>
+          </li>
+          <li class="patterns__list-item pattern">
+            <h3 class="pattern__title">А+</h3>
+            <img src="https://via.placeholder.com/358x578" alt="Фото сайта A+" class="pattern__photo">
+            <p class="pattern__description">
+              Обучающий сайт для образования
+            </p>
+            <button class="pattern__btn-price">9 900 ₽</button>
+          </li>
+          <li class="patterns__list-item pattern">
+            <h3 class="pattern__title">Кваст</h3>
+            <img src="https://via.placeholder.com/358x578" alt="Фото сайта Кваст" class="pattern__photo">
+            <p class="pattern__description">
+              Продуктовый сайт для продажи крафтового пива
+            </p>
+            <button class="pattern__btn-price">9 900 ₽</button>
+          </li>
+        </ul>
+
+        <ul class="patters__pagination">
+          <li class="patterns__pagination-item">
+            <a href="#">1</a>
+          </li>
+          <li class="patterns__pagination-item">
+            <a href="#">2</a>
+          </li>
+          <li class="patterns__pagination-item">
+            <a href="#">3</a>
+          </li>
+          <li class="patterns__pagination-item">
+            <a href="#">Следующая</a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="map">
+        <h2 class="visually-hidden">Карта</h2>
+        <!-- Тут будет карта гугл/яндекс -->
+      </section>
     </main>
 
     <footer class="footer">
