--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="#">Клиенты</a>
           </li>
           <li class="site-list__item">
-            <a href="#">Магазин</a>
+            <a href="catalog.html">Магазин</a>
           </li>
           <li class="site-list__item">
             <a href="#">Контакты</a>
