Исправил ссылку на главную в катологе и ссылки заголовков карточек шаблонов

--- a/catalog.html
+++ b/catalog.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <header class="header">
-      <a class="header__link-logo">
-        <img src="" alt="Логотип Нёрдс">
+      <a href="index.html" class="header__link-logo">
+        <img src="https://via.placeholder.com/160x65" alt="Логотип Нёрдс">
       </a>
 
       <nav class="header__main-nav main-nav">
@@ -47,7 +47,9 @@
 
         <ul class="patterns__list">
           <li class="patterns__list-item pattern">
-            <h3 class="pattern__title">Sedona</h3>
+            <h3 class="pattern__title">
+              <a href="#">Sedona</a>
+            </h3>
             <img src="https://via.placeholder.com/358x578" alt="Фото сайта Седона" class="pattern__photo">
             <p class="pattern__description">
               Информационный сайт для туристов
@@ -55,15 +57,19 @@
             <button class="pattern__btn-price">9 900 ₽</button>
           </li>
           <li class="patterns__list-item pattern">
-            <h3 class="pattern__title">Pink</h3>
+            <h3 class="pattern__title">
+              <a href="#">Pink</a>
+            </h3>
             <img src="https://via.placeholder.com/358x578" alt="Фото сайта Pink" class="pattern__photo">
             <p class="pattern__description">
-              сайт приложения фильтра розового цвета
+              Cайт приложения фильтра розового цвета
             </p>
             <button class="pattern__btn-price">9 900 ₽</button>
           </li>
           <li class="patterns__list-item pattern">
-            <h3 class="pattern__title">Barbershop Borodinski</h3>
+            <h3 class="pattern__title">
+              <a href="#">Barbershop Borodinski</a>
+            </h3>
             <img src="https://via.placeholder.com/358x578" alt="Фото сайта Barbershop" class="pattern__photo">
             <p class="pattern__description">
               Сайт барбершопа для бородачей
@@ -71,7 +77,9 @@
             <button class="pattern__btn-price">9 900 ₽</button>
           </li>
           <li class="patterns__list-item pattern">
-            <h3 class="pattern__title">Mishka</h3>
+            <h3 class="pattern__title">
+              <a href="#">Mishka</a>
+            </h3>
             <img src="https://via.placeholder.com/358x578" alt="Фото сайта Mishka" class="pattern__photo">
             <p class="pattern__description">
               Милые штуки ручной работы для дома
@@ -79,7 +87,9 @@
             <button class="pattern__btn-price">9 900 ₽</button>
           </li>
           <li class="patterns__list-item pattern">
-            <h3 class="pattern__title">А+</h3>
+            <h3 class="pattern__title">
+              <a href="#">А+</a>
+            </h3>
             <img src="https://via.placeholder.com/358x578" alt="Фото сайта A+" class="pattern__photo">
             <p class="pattern__description">
               Обучающий сайт для образования
@@ -87,7 +97,9 @@
             <button class="pattern__btn-price">9 900 ₽</button>
           </li>
           <li class="patterns__list-item pattern">
-            <h3 class="pattern__title">Кваст</h3>
+            <h3 class="pattern__title">
+              <a href="#">Кваст</a>
+            </h3>
             <img src="https://via.placeholder.com/358x578" alt="Фото сайта Кваст" class="pattern__photo">
             <p class="pattern__description">
               Продуктовый сайт для продажи крафтового пива
