Разметил слайдер и карты

--- a/index.html
+++ b/index.html
@@ -35,7 +35,30 @@
 
       <section class="promo-slider">
         <h2 class="visually-hidden">Промо-слайдер</h2>
-        <!-- Тут будет слайдер -->
+
+        <ul class="promo-slider__list">
+          <li class="promo-slider__list-item slide">
+            <h3 class="slide__title">Долго, дорого, скрупулезно.</h3>
+            <p class="slide__text">
+              Математически выверенный дизайн для вашего сайта или мобильного приложения.
+            </p>
+            <a href="#" class="slide__link-to-more">Узнать больше</a>
+          </li>
+          <li class="promo-slider__list-item slide">
+            <h3 class="slide__title">Любим математику как никто другой</h3>
+            <p class="slide__text">
+              Никакого креатива, только математические формулы для расчета идеальных пропорций
+            </p>
+            <a href="#" class="slide__link-to-more">Узнать больше</a>
+          </li>
+          <li class="promo-slider__list-item slide">
+            <h3 class="slide__title">Только ночь, только хардкор</h3>
+            <p class="slide__text">
+              Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.
+            </p>
+            <a href="#" class="slide__link-to-more">Узнать больше</a>
+          </li>
+        </ul>
       </section>
 
       <section class="services">
@@ -146,7 +169,14 @@
 
       <section class="map">
         <h2 class="visually-hidden">Карта</h2>
-        <!-- Тут будет карта гугл/яндекс -->
+
+        <iframe class="map__iframe" src="https://yandex.ru/map-widget/v1/-/CCQdu8V22C" width="1440" height="416"></iframe>
+
+        <h3 class="map__title">Nёrds Design Studio</h3>
+        <address class="map__address">191186, Санкт-Петербург, ул. Большая Конюшенная, д. 19/8</address>
+        <a href="tel:+78122757575" class="map__phone">+7 (812) 275-75-75</a>
+
+        <button class="map__btn-open-modal">Напишите нам</button>
       </section>
     </main>
 
