--- a/catalog.html
+++ b/catalog.html
@@ -126,7 +126,14 @@
 
       <section class="map">
         <h2 class="visually-hidden">Карта</h2>
-        <!-- Тут будет карта гугл/яндекс -->
+
+        <iframe class="map__iframe" src="https://yandex.ru/map-widget/v1/-/CCQdu8V22C" width="1440" height="416"></iframe>
+
+        <h3 class="map__title">Nёrds Design Studio</h3>
+        <address class="map__address">191186, Санкт-Петербург, ул. Большая Конюшенная, д. 19/8</address>
+        <a href="tel:+78122757575" class="map__phone">+7 (812) 275-75-75</a>
+
+        <button class="map__btn-open-modal">Напишите нам</button>
       </section>
     </main>
 
