--- a/catalog.html
+++ b/catalog.html
@@ -33,13 +33,30 @@
 
     <main class="main">
       <section class="main-filter">
-        <h2>Поиск шаблонов по фильтру</h2>
+        <h2 class="visually-hidden">Поиск шаблонов по фильтру</h2>
         <!-- Тут будет форма фильтров -->
       </section>
 
       <section class="sort-filter">
-        <h2>Фильтр сортировки</h2>
-        <!-- Тут будут  -->
+        <h2 class="sort-filter__title">Сортировать:</h2>
+
+        <ul class="sort-filter__list-of-links">
+          <li class="sort-filter__link">
+            <a href="#">По цене</a>
+          </li>
+          <li class="sort-filter__link">
+            <a href="#">По типу</a>
+          </li>
+          <li class="sort-filter__link">
+            <a href="#">По названию</a>
+          </li>
+          <li class="sort-filter__link">
+            <a href="#">По убыванию</a>
+          </li>
+          <li class="sort-filter__link">
+            <a href="#">По возрастанию</a>
+          </li>
+        </ul>
       </section>
 
       <section class="patterns">
@@ -133,7 +150,7 @@
         <address class="map__address">191186, Санкт-Петербург, ул. Большая Конюшенная, д. 19/8</address>
         <a href="tel:+78122757575" class="map__phone">+7 (812) 275-75-75</a>
 
-        <button class="map__btn-open-modal">Напишите нам</button>
+        <a class="map__btn-open-modal" href="#">Напишите нам</a>
       </section>
     </main>
 
