--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <address class="map__address">191186, Санкт-Петербург, ул. Большая Конюшенная, д. 19/8</address>
         <a href="tel:+78122757575" class="map__phone">+7 (812) 275-75-75</a>
 
-        <button class="map__btn-open-modal">Напишите нам</button>
+        <a class="map__btn-open-modal" href="#">Напишите нам</a>
       </section>
     </main>
 
