Экспортировал изображения и вставил в img вместо заглушек

--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <body>
     <header class="header">
       <a href="index.html" class="header__link-logo">
-        <img src="https://via.placeholder.com/160x65" alt="Логотип Нёрдс">
+        <img class="header__logo" src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
       </a>
 
       <nav class="header__main-nav main-nav">
@@ -67,7 +67,7 @@
             <h3 class="pattern__title">
               <a href="#">Sedona</a>
             </h3>
-            <img src="https://via.placeholder.com/358x578" alt="Фото сайта Седона" class="pattern__photo">
+            <img class="pattern__photo" src="img/img-sedona.png" width="358" height="578" alt="Фото сайта Седона">
             <p class="pattern__description">
               Информационный сайт для туристов
             </p>
@@ -77,7 +77,7 @@
             <h3 class="pattern__title">
               <a href="#">Pink</a>
             </h3>
-            <img src="https://via.placeholder.com/358x578" alt="Фото сайта Pink" class="pattern__photo">
+            <img class="pattern__photo" src="img/img-pink.png" width="358" height="578" alt="Фото сайта Pink">
             <p class="pattern__description">
               Cайт приложения фильтра розового цвета
             </p>
@@ -87,7 +87,7 @@
             <h3 class="pattern__title">
               <a href="#">Barbershop Borodinski</a>
             </h3>
-            <img src="https://via.placeholder.com/358x578" alt="Фото сайта Barbershop" class="pattern__photo">
+            <img class="pattern__photo" src="img/img-barbershop.png" width="358" height="578" alt="Фото сайта Барбершопа>">
             <p class="pattern__description">
               Сайт барбершопа для бородачей
             </p>
@@ -97,7 +97,7 @@
             <h3 class="pattern__title">
               <a href="#">Mishka</a>
             </h3>
-            <img src="https://via.placeholder.com/358x578" alt="Фото сайта Mishka" class="pattern__photo">
+            <img class="pattern__photo" src="img/img-mishka.png" width="358" height="578" alt="Фото сайта Седона">
             <p class="pattern__description">
               Милые штуки ручной работы для дома
             </p>
@@ -107,7 +107,7 @@
             <h3 class="pattern__title">
               <a href="#">А+</a>
             </h3>
-            <img src="https://via.placeholder.com/358x578" alt="Фото сайта A+" class="pattern__photo">
+            <img class="pattern__photo" src="img/img-aplus.png" width="358" height="578" alt="Фото сайта Седона">
             <p class="pattern__description">
               Обучающий сайт для образования
             </p>
@@ -117,7 +117,7 @@
             <h3 class="pattern__title">
               <a href="#">Кваст</a>
             </h3>
-            <img src="https://via.placeholder.com/358x578" alt="Фото сайта Кваст" class="pattern__photo">
+            <img class="pattern__photo" src="img/img-kvast.png" width="358" height="578" alt="Фото сайта Седона">
             <p class="pattern__description">
               Продуктовый сайт для продажи крафтового пива
             </p>
@@ -144,6 +144,7 @@
       <section class="map">
         <h2 class="visually-hidden">Карта</h2>
 
+        <img class="map__image" src="img/map.png" width="1440" height="416"  alt="Карта">
         <iframe class="map__iframe" src="https://yandex.ru/map-widget/v1/-/CCQdu8V22C" width="1440" height="416"></iframe>
 
         <h3 class="map__title">Nёrds Design Studio</h3>
