--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header class="header">
       <a class="header__link-logo">
-        <img class="header__logo" src="https://via.placeholder.com/160x65" alt="Логотип Нёрдс">
+        <img class="header__logo" src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
       </a>
 
       <nav class="header__main-nav main-nav">
@@ -117,7 +117,7 @@
           </li>
         </ul>
 
-        <img class="descrition-nerds__logo" src="https://via.placeholder.com/360x280" alt="Логотип Neds">
+        <img class="descrition-nerds__logo" src="img/nerds-illustration-1.png" width="360" height="208" alt="Логотип Neds">
 
         <h3>С 2004 года любим точность во всем:</h3>
         <table class="descrition-nerds__static-table">
@@ -170,6 +170,7 @@
       <section class="map">
         <h2 class="visually-hidden">Карта</h2>
 
+        <img class="map__image" src="img/map.png" width="1440" height="416"  alt="Карта">
         <iframe class="map__iframe" src="https://yandex.ru/map-widget/v1/-/CCQdu8V22C" width="1440" height="416"></iframe>
 
         <h3 class="map__title">Nёrds Design Studio</h3>
