Добавил полям ввода имя

--- a/catalog.html
+++ b/catalog.html
@@ -190,17 +190,17 @@
       <form action="https://echo.htmlacademy.ru" class="modal-callback__form">
         <label class="modal-callback__label">
           <p>Ваше имя:</p>
-          <input class="modal-callback__input-text" type="text" placeholder="Имя Фамилия">
+          <input class="modal-callback__input-text" type="text" name="name" placeholder="Имя Фамилия">
         </label>
 
         <label class="modal-callback__label">
           <p>Ваш email:</p>
-          <input class="modal-callback__input-text" type="text" placeholder="email@example.com">
+          <input class="modal-callback__input-text" type="text" name="email" placeholder="email@example.com">
         </label>
 
         <label class="modal-callback__label">
           <p>Текст письма</p>
-          <textarea class="modal-callback__textarea" placeholder="В свободной форме"></textarea>
+          <textarea class="modal-callback__textarea" name="comment" placeholder="В свободной форме"></textarea>
         </label>
 
         <button class="modal-callback__btn-submit" type="submit">Отправить</button>
