изменил поле почты на тип email

--- a/catalog.html
+++ b/catalog.html
@@ -195,7 +195,7 @@
 
         <label class="modal-callback__label">
           <p>Ваш email:</p>
-          <input class="modal-callback__input-text" type="text" name="email" placeholder="email@example.com">
+          <input class="modal-callback__input-text" type="email" name="email" placeholder="email@example.com">
         </label>
 
         <label class="modal-callback__label">
