--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
         <label class="modal-callback__label">
           <p>Ваш email:</p>
-          <input class="modal-callback__input-text" type="text" name="email" placeholder="email@example.com">
+          <input class="modal-callback__input-text" type="email" name="email" placeholder="email@example.com">
         </label>
 
         <label class="modal-callback__label">
