убрал тег <p> в <label> в модальном блоке

--- a/catalog.html
+++ b/catalog.html
@@ -245,17 +245,17 @@
 
       <form action="https://echo.htmlacademy.ru" class="modal-callback__form">
         <label class="modal-callback__label">
-          <p>Ваше имя:</p>
+          Ваше имя:
           <input class="modal-callback__input-text" type="text" name="name" placeholder="Имя Фамилия">
         </label>
 
         <label class="modal-callback__label">
-          <p>Ваш email:</p>
+          Ваш email:
           <input class="modal-callback__input-text" type="email" name="email" placeholder="email@example.com">
         </label>
 
         <label class="modal-callback__label">
-          <p>Текст письма</p>
+          Текст письма
           <textarea class="modal-callback__textarea" name="comment" placeholder="В свободной форме"></textarea>
         </label>
 
