--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
     <title>Нёрдс — Главная</title>
+    <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="header">
@@ -78,7 +80,7 @@
             <p class="service__description">
               Покорите топ-10 приложений в AppStore и Google Play
             </p>
-            <a href="#" class="service__link-order">Заказать</a>
+            <a href="#" class="service__link-order service__link-order--green">Заказать</a>
           </li>
 
           <li class="services__list-item service">
@@ -86,63 +88,63 @@
             <p class="service__description">
               Вы даже не подозреваете, насколько вы изумительны!
             </p>
-            <a href="#" class="service__link-order">Заказать</a>
+            <a href="#" class="service__link-order service__link-order--yellow">Заказать</a>
           </li>
         </ul>
       </section>
 
-      <section class="descrition-nerds">
+      <section class="description-nerds">
         <h2 class="visually-hidden">Описание компании Nёrds</h2>
 
-        <p class="descrition-nerds__text-slogan">
+        <p class="description-nerds__text-slogan">
           Мы — маленькая, но гордая дизайн-студия из Краснодара.
         </p>
 
-        <p class="descrition-nerds__text-principles">
+        <p class="description-nerds__text-principles">
           Исповедуем принципы минимализма и чистоты.
           Ставим математический расчет превыше креатива.
           Работаем не покладая рук, как роботы
         </p>
 
-        <h3 class="descrition-nerds__title">Выполняем заказы на разработку:</h3>
-        <ul class="descrition-nerds__list-services">
-          <li class="descrition-nerds__list-services-item">
+        <h3 class="description-nerds__title">Выполняем заказы на разработку:</h3>
+        <ul class="description-nerds__list-services">
+          <li class="description-nerds__list-services-item">
             Веб-сайтов любой сложности
           </li>
-          <li class="descrition-nerds__list-services-item">
+          <li class="description-nerds__list-services-item">
             Мобильных приложений для iOS и Android
           </li>
-          <li class="descrition-nerds__list-services-item">
+          <li class="description-nerds__list-services-item">
             Слайдшоу и видео для корпоративных презентации
           </li>
         </ul>
 
-        <img class="descrition-nerds__logo" src="img/nerds-illustration-1.png" width="360" height="208" alt="Логотип Neds">
+        <img class="description-nerds__logo" src="img/nerds-illustration-1.png" width="360" height="208" alt="Логотип Neds">
 
-        <h3>С 2004 года любим точность во всем:</h3>
-        <table class="descrition-nerds__static-table">
+        <h3 class="description-nerds__table-title">С 2004 года любим точность во всем:</h3>
+        <table class="description-nerds__static-table">
           <tr>
-            <td class="descrition-nerds__static-table-field">
+            <td class="description-nerds__static-table-field">
               Уровень самоотдачи
             </td>
-            <td class="descrition-nerds__static-table-value">
-              146%
+            <td class="description-nerds__static-table-value">
+              146<span class="description-nerds__static-table-value-procent">%</span>
             </td>
           </tr>
           <tr>
-            <td class="descrition-nerds__static-table-field">
+            <td class="description-nerds__static-table-field">
               Соблюдение сроков
             </td>
-            <td class="descrition-nerds__static-table-value">
-              100%
+            <td class="description-nerds__static-table-value">
+              100<span class="description-nerds__static-table-value-procent">%</span>
             </td>
           </tr>
           <tr>
-            <td class="descrition-nerds__static-table-field">
+            <td class="description-nerds__static-table-field">
               Минимальная предоплата
             </td>
-            <td class="descrition-nerds__static-table-value">
-              50%
+            <td class="description-nerds__static-table-value">
+              50<span class="description-nerds__static-table-value-procent">%</span>
             </td>
           </tr>
         </table>
@@ -153,16 +155,16 @@
 
         <ul class="partners__list">
           <li class="partners__list-item">
-            Html Academy
+            <a class="partners__link" href="#">Html Academy</a>
           </li>
           <li class="partners__list-item">
-            Barbershop Borodinski
+            <a class="partners__link" href="#">Barbershop Borodinski</a>
           </li>
           <li class="partners__list-item">
-            Pink
+            <a class="partners__link" href="#">Pink</a>
           </li>
           <li class="partners__list-item">
-            Mishka
+            <a class="partners__link" href="#">Mishka</a>
           </li>
         </ul>
       </section>
