Сверстал стили для текста для блока "Напишите нам"

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
     <!-- Модальное окно "Напишите нам" -->
     <section class="modal-callback">
-      <h2 class="modal-callback">Напишите нам</h2>
+      <h2 class="modal-callback__title">Напишите нам</h2>
 
       <form action="https://echo.htmlacademy.ru" class="modal-callback__form">
         <label class="modal-callback__label">
@@ -229,6 +229,7 @@
         </label>
 
         <button class="modal-callback__btn-submit" type="submit">Отправить</button>
+        <button class="modal-callback__btn-close" type="button">Закрыть</button>
       </form>
     </section>
   </body>
