--- a/catalog.html
+++ b/catalog.html
@@ -243,7 +243,7 @@
 
     <!-- Модальное окно "Напишите нам" -->
     <section class="modal-callback">
-      <h2 class="modal-callback">Напишите нам</h2>
+      <h2 class="modal-callback__title">Напишите нам</h2>
 
       <form action="https://echo.htmlacademy.ru" class="modal-callback__form">
         <label class="modal-callback__label">
@@ -262,6 +262,7 @@
         </label>
 
         <button class="modal-callback__btn-submit" type="submit">Отправить</button>
+        <button class="modal-callback__btn-close" type="button">Закрыть</button>
       </form>
     </section>
   </body>
